2011-10-28  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSMutableString/basic.m: Add test for replaceOccurrencesOfString:...range:

2011-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Do not redefine GNUSTEP_CONFIG_FILE in case it confuses
	gnustep-config.  Add check that gnustep-config returns something when
	asked for the objc libraries.
	* configure: Regenerate
	* base.make.in: Add flag to tell compiler to use UTF-8 for literal
	string constants.

2011-10-25  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: fix erroneous define of HAVE_GNUTLS to zero, and add
	check for building with a  different compiler from that used by make.

2011-10-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-initWithCoder:, encodeWithCoder:):
	Don't do anything for the keyed coding case.
	* Source/NSDictionary.m (-initWithCoder:): Add another keyed
	coding case.

2011-10-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSProcessInfo.m: Add includes needed for the HAVE_PROCFS
	case.
	* Source/common.h: Correct last commit, the #endif was placed
	incorrectly.

2011-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/common.h: Attempt to workaround clang __block problem

2011-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m:
	Fix for bug #34603

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: fixes for gnutls detection and to use the objc
	libraries provided by gnustep-config.

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSFileHandle.h: remove
	* Source/GSFileHandle.h: add
	* Source/GNUmakefile: Don't install private header
	* Source/NSFileHandle.m:
	* Source/GSFileHandle.m:
	* SSL/GSSSLHandle.m:
	Update to make GSFileHandle.h: private as it should be.

2011-10-19  Sebastian Reitenbach

	* configure.ac: fix typo on gnutls detection.

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: